--- a/WaterborneSupervisionPlatform/WaterborneSupervisionPlatform.csproj
+++ b/WaterborneSupervisionPlatform/WaterborneSupervisionPlatform.csproj
@@ -40,6 +40,9 @@
     <None Update="Models\Yolo\yolov5m.onnx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Models\Yolo\yolov8n.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
