--- a/WaterborneSupervisionPlatform/WaterborneSupervisionPlatform.csproj
+++ b/WaterborneSupervisionPlatform/WaterborneSupervisionPlatform.csproj
@@ -8,11 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LibVLCSharp" Version="3.8.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="OpenCvSharp4" Version="4.9.0.20240103" />
+    <PackageReference Include="OpenCvSharp4.Extensions" Version="4.9.0.20240103" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.9.0.20240103" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
+    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Detecting.YoloDetector\Detecting.YoloDetector.csproj" />
+    <ProjectReference Include="..\DL.Common\DL.Common.csproj" />
     <ProjectReference Include="..\MOT.CORE\MOT.CORE.csproj" />
+    <ProjectReference Include="..\Trackering.DeepSortTracker\Tracing.DeepSortTracker.csproj" />
   </ItemGroup>
 
   <ItemGroup>
